[package]
name = "sloader-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12"
http = "0.2"
log = "0.4"
bytes = "1.2"
rand = "0.8"
uuid = "1.2"
dotenv = "0.15"
mysql = "22.2"
rust-argon2 = "1.0"
byteorder = "1.4"