[package]
name = "sloader-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12"
log = "0.4"
bytes = "1.2"
rand = "0.8"
uuid = { version = "1.2", features = ["v4"] }
dotenv = "0.15"
mysql = "22.2"
rust-argon2 = "1.0"
byteorder = "1.4"
path-clean = "0.1.0"
actix-files = "0.6"
http = "0.2"
futures = "0.3"
actix-multipart = "0.4"